--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
 </head>
 <body>
     <div class="topnav">
-      
-        <img src="./img/shoppingCart.png" id="cartImg" title="Shopping Cart"  alt="Shopping Cart of items to order">
-   
+      <div class="topnav-right">
+        <input type="image" src="./img/shoppingCart.png" id="cartImg" title="Shopping Cart"  alt="Shopping Cart of items to order">
+      </div>
+      <div class="topnav-right">
         <a href="#aboutUs">About Us</a>
         <a href="#contact">Contact</a>
         <a href="#productBrowsing">Menu</a>
-        <a>Bun Bun Bakeshop</a>
-        <div class="imgHolder" >
+      </div>
+        <div class="logoHolder" >
           <img src="./img/logo.png" id="logoImg" title="Bun Bun Bakeshop"  alt="The Bun Bun Bakeshop logo">
+          <h2>Bun Bun Bakeshop</h2>
         </div>
-      </div><br><br>
+      </div>  
+    </div><br><br>
+
       <h2 id="sectionTitle">Our Bestsellers:</h2>
       <div class="grid-container ">
         <div class="grid-item">
@@ -50,12 +54,12 @@
           <h2 id="sectionTitle">Customer Reviews:</h2>
           <div class="review">
             <div id="box">
-              <h2>Arjun J.</h2>
+              <h2 id="reviewerName">Arjun J.</h2>
               <h3>"The rolls here are so good I almost cried. The inside of these rolls are so fluffy and soft, it's like biting into a cloud!
                 The icing on top is not too sweet and is very flavorful. I also love all the unique flavors that they have too."</h3>
             </div>
             <div id="box">
-              <h2>Kalyen S.</h2>
+              <h2 id="reviewerName">Kalyen S.</h2>
               <h3>"A friend recommended me Bun Bun Bakeshop a few years ago. I tried their rolls and absolutely fell in love! 
                 Not too sweet, but hits the spot! I've been a regular customer and always get a weekly box of a dozen for my family and I."</h3>
             </div>
