changed name of captions

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Caption here</div>
+              <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Caption here</div>
+              <div class="caption">Original Roll</div>
             </div>
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Caption here</div>
+              <div class="caption">Pecan Roll</div>
             </div>
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Caption here</div>
+              <div class="caption">Walnut Roll</div>
             </div>
           </div>
         </div>
