implemented all 3 pages with  proper css

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
       <div class="topnav-right">
         <a href="#aboutUs">About Us</a>
         <a href="#contact">Contact</a>
-        <a href="#productBrowsing">Menu</a>
+        <a href="productBrowsing.html">Menu</a>
       </div>
-        <div class="logoHolder" >
-          <img src="./img/logo.png" id="logoImg" title="Bun Bun Bakeshop"  alt="The Bun Bun Bakeshop logo">
-          <h2>Bun Bun Bakeshop</h2>
-        </div>
-      </div>  
+      <div class="logoHolder" >
+        <a href="index.html">
+            <img src="./img/logo.png" id="logoImg" title="Bun Bun Bakeshop"  alt="The Bun Bun Bakeshop logo">
+        </a>
+        <h2 id="storeName">Bun Bun Bakeshop</h2>
+      </div> 
     </div><br><br>
 
       <h2 id="sectionTitle">Our Bestsellers:</h2>
@@ -33,17 +34,17 @@
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Original Roll</div>
+              <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Pecan Roll</div>
+              <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
               <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
-              <div class="caption">Walnut Roll</div>
+              <div class="caption">Blackberry Roll</div>
             </div>
           </div>
         </div>
