--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
       </div> 
     </div><br><br>
 
-      <h2 id="sectionTitle">Our Bestsellers:</h2>
+      <h2 class="sectionTitle">Our Bestsellers:</h2>
       <div class="grid-container ">
         <div class="grid-item">
           <div class="picture-gallery">
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
           </div>
@@ -52,22 +52,20 @@
           <button id="exploreButton" type="button">Explore Our Menu!</button>
         </div>
         <div class="grid-item">
-          <h2 id="sectionTitle">Customer Reviews:</h2>
+          <h2 class="sectionTitle">Customer Reviews:</h2>
           <div class="review">
-            <div id="box">
-              <h2 id="reviewerName">Arjun J.</h2>
+            <div class="box">
+              <h2 class="reviewerName">Arjun J.</h2>
               <h3>"The rolls here are so good I almost cried. The inside of these rolls are so fluffy and soft, it's like biting into a cloud!
                 The icing on top is not too sweet and is very flavorful. I also love all the unique flavors that they have too."</h3>
             </div>
-            <div id="box">
-              <h2 id="reviewerName">Kalyen S.</h2>
+            <div class="box">
+              <h2 class="reviewerName">Kalyen S.</h2>
               <h3>"A friend recommended me Bun Bun Bakeshop a few years ago. I tried their rolls and absolutely fell in love! 
                 Not too sweet, but hits the spot! I've been a regular customer and always get a weekly box of a dozen for my family and I."</h3>
             </div>
           </div>
         </div>
-
       </div>
-
-</body>
+  </body>
 </html>
