--- a/productBrowsing.html
+++ b/productBrowsing.html
@@ -21,83 +21,80 @@
             <h2 id="storeName">Bun Bun Bakeshop</h2>
         </div>
       </div>  
-    </div><br><br>
+      <br><br>
     
-    <h2 id="sectionTitle">New This Season:</h2>
+    <h2 class="sectionTitle">New This Season:</h2>
     <div class="grid-container">
         <div class="grid-item">
           <div class="picture-gallery">
               <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
               </div>
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
-              <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+              <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
               <div class="caption">Blackberry Roll</div>
             </div>
 
             <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
             </div>
           </div>
         </div>
 
         <div class="grid-item">
-            <h2 id="sectionTitle">All Rolls:</h2>
+            <h2 class="sectionTitle">All Rolls:</h2>
             <div class="picture-gallery">
                 <div class="imgHolder">
                 <a href="productDetail.html">
-                    <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                    <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 </a>
                 <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                    <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                    <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                     <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                    <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                    <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                     <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                 <div class="caption">Blackberry Roll</div>
                 </div>
 
                 <div class="imgHolder">
-                    <img src="./img/roll1.jpg" id="galleryImg" title="Blackberry" alt="Blackberry Bun">
+                    <img src="./img/roll1.jpg" class="galleryImg" title="Blackberry" alt="Blackberry Bun">
                     <div class="caption">Blackberry Roll</div>
                 </div>
             </div>
         </div>
-      
-
       </div>
-
-</body>
+  </body>
 </html>
