implemented shopping cart page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <div class="topnav">
       <div class="topnav-right">
-        <input type="image" src="./img/shoppingCart.png" id="cartImg" title="Shopping Cart"  alt="Shopping Cart of items to order">
-      </div>
-      <div class="topnav-right">
+        <a href="shoppingCart.html" >
+          <input type="image" src="./img/shoppingCart.png" id="cartImg" title="Shopping Cart"  alt="Shopping Cart of items to order">
+      </a>
         <a href="#aboutUs">About Us</a>
         <a href="#contact">Contact</a>
         <a href="productBrowsing.html">Menu</a>
