--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -9,8 +9,9 @@
     <div class="overlay">
         <div class="topnav">
             <div class="topnav-right">
-                <a href="shoppingCart.html" >
-                    <input type="image" src="./img/shoppingCart.png" id="cartImg" title="Shopping Cart"  alt="Shopping Cart of items to order">
+                <a id="cartWithCount" href="shoppingCart.html" >
+                    <input type="image" src="./img/shoppingCart.png" id="updatedCartImg" class= "selectedCart" title="Shopping Cart"  alt="Shopping Cart of items to order">
+                    <h6 id="orderCount">1</h6>
                 </a>
                 <a href="#aboutUs">About Us</a>
                 <a href="#contact">Contact</a>
@@ -24,6 +25,24 @@
             </div>
           </div>  
         </div><br><br>
+
+        <div id="cartList">
+            <div id="cartTitle">
+                <span id="close" class="close">&times;</span>
+                <h2 id="titleName">Checkout</h2>
+            </div>
+            <div class="order">
+                <img src="./img/roll1.jpg" class="cartImg" title="Blackberry" alt="Blackberry Bun">
+                <div class="orderItemInfo">
+                    <h3>Blackberry Roll</h3>
+                    <h4 class="glazingTitle">Glazing:</h4>
+                    <h4 class="glazingTitle">Sugar-Milk</h4>
+                </div>
+                <h2 class="rollCount" id="rollCount1">x3</h2>
+            </div>
+            <button class = "placeOrder" type="button">Place Order</button>
+        </div>
+
         <h2 class="sectionTitle">New This Season:</h2>
         <div class="grid-container grid-container1">
             <div class="grid-item">
@@ -50,29 +69,6 @@
                     </div>
                 </div>
             </div><br>
-        </div>
-
-        <div id="productDetail">
-            <span class="close">&times;</span>
-            <h2 class="popUpTitle">Blackberry</h2>
-            <h3 class="popUpTitle">$3.25</h3>
-            <button class="accordion label1">Ingredients: </button>
-            <div class="panel">
-                <p>Flour, Sugar, Blackberry, Baking Soda</p>
-            </div><br>
-            <div id="select">
-                <label class ="label1" for="glazings">Select a Glazing:</label>
-                <select id="glazings" name="glazings" class="label1">
-                <option value="sugarMilk">Sugar-Milk</option>
-                <option value="vanillaMilk">Vanilla-Milk</option>
-                <option value="doubleChoco">Double-Chocolate</option>
-                <option value="none">None</option>
-                </select>
-                <button class = "amountButton" id="amount" type="button">-</button>
-                <input type="text" name="amount">
-                <button class = "amountButton" type="button">+</button>
-            </div>
-            <button class = "addToCart" type="button">Add to Cart</button>
         </div>
 
         <div class="grid-container grid-container1">
